message( STATUS "Configuring libraries..." )

add_subdirectory( acm )
add_subdirectory( assimp )
add_subdirectory( distorm.bin )
add_subdirectory( dx9.bin )
add_subdirectory( fltk.bin )
add_subdirectory( glew )
add_subdirectory( il.bin )
add_subdirectory( jpeg.bin )
add_subdirectory( ogg.bin )
add_subdirectory( png.bin )
add_subdirectory( portaudio.bin )
add_subdirectory( pthread.bin )
add_subdirectory( sha2 )
add_subdirectory( theora.bin )
add_subdirectory( zlib )

set_target_properties( acm glew sha2 zlib PROPERTIES FOLDER "Libs" )

message( STATUS "Configuring libraries... OK" )
