message( STATUS "Configuring libraries..." )

add_subdirectory( acm )
add_subdirectory( angelscript-preprocessor )
add_subdirectory( assimp )
add_subdirectory( distorm.bin )
add_subdirectory( dx9.bin )
add_subdirectory( event2.bin )
add_subdirectory( fltk.bin )
add_subdirectory( glew )
add_subdirectory( il.bin )
add_subdirectory( jpeg.bin )
add_subdirectory( ogg.bin )
add_subdirectory( png.bin )
add_subdirectory( portaudio.bin )
add_subdirectory( pthread.bin )
add_subdirectory( sha2 )
add_subdirectory( theora.bin )
add_subdirectory( zlib )

set_property( TARGET acm angelscript-preprocessor glew sha2 zlib PROPERTY FOLDER "${FOCLASSIC_FOLDER_PREFIX}/Libs" )

message( STATUS "Configuring libraries... OK" )
